# del-rs

./: .mergify.yml  Cargo.toml  README.md
.github/workflows/: crates-publish-github-packages.yml  rust.yml
src/: del.rs  errors.rs  lib.rs  models.rs  submodels.rs
